--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,87 +1,72 @@
-name: CI/CD Sample App
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/sample-app
+  IMAGE_NAME: getting-started
+  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+  CLUSTER_NAME: your-cluster-name
+  AWS_REGION: your-aws-region
 
 jobs:
-
-  sonar:
-    name: SonarQube Analysis
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t $IMAGE_NAME .
+          docker tag $IMAGE_NAME:latest $ECR_REGISTRY/$IMAGE_NAME:latest
+          docker push $ECR_REGISTRY/$IMAGE_NAME:latest
+
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@v1.2
-        with:
-          projectBaseDir: .
+        uses: SonarSource/sonarqube-scan-action@v1
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-  docker:
-    name: Docker Build & Push
-    needs: sonar
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and Push
+      - name: Print Hola Mundo in Parallel
         run: |
-          docker build -t $IMAGE_NAME:${{ github.run_number }} .
-          docker push $IMAGE_NAME:${{ github.run_number }}
-
-  bash-parallel:
-    name: Print Hola Mundo in Parallel
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        job: [1,2,3,4,5,6,7,8,9,10]
-    steps:
-      - run: echo "Hola Mundo desde job ${{ matrix.job }}"
-
-  create-files:
-    name: Crear archivos y mostrar contenido
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          mkdir logs
           for i in {1..10}; do
-            date > logs/file_$i.txt
+            echo "Hola Mundo $i" &
           done
-          cat logs/*
+          wait
+
+      - name: Create and Display Date Files
+        run: |
+          for i in {1..10}; do
+            date > "fecha_$i.txt"
+          done
+          cat fecha_*.txt
 
   deploy:
-    name: Deploy to EKS
-    needs: docker
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Update kubeconfig
-        run: aws eks update-kubeconfig --region us-east-1 --name sample-cluster
-      - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl apply -f k8s/ingress.yaml
+          aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
+
+      - name: Deploy with Helm
+        run: |
+          helm upgrade --install getting-started ./helm/getting-started --namespace default
