--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,12 +17,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
+   - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: arn:aws:iam::370145870803:role/githubactions
+          aws-region: us-east-1
+          audience: sts.amazonaws.com
+
+      - name: Confirm AWS identity
+        run: aws sts get-caller-identity
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
