--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,15 +4,10 @@ on:
   push:
     branches: [ main ]
 
-env:
-  IMAGE_NAME: getting-started
-  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-  CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: test  # Si usas Environment Secrets
 
     steps:
       - name: Checkout code
@@ -22,20 +17,13 @@ jobs:
         run: |
           echo "AWS_REGION=${{ secrets.AWS_REGION }}"
           echo "AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}"
-     
+
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
-         role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/githubactions
-         aws-region: us-east-1
-         audience: sts.amazonaws.com
-         env:
-         IMAGE_NAME: getting-started
-         ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-         CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
-
-      - name: Confirm AWS identity
-        run: aws sts get-caller-identity
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/githubactions
+          aws-region: ${{ secrets.AWS_REGION }}
+          audience: sts.amazonaws.com
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -44,6 +32,11 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build and Push Docker Image
+        env:
+          IMAGE_NAME: getting-started
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+          ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
         run: |
           docker build -t $IMAGE_NAME .
           docker tag $IMAGE_NAME:latest $ECR_REGISTRY/$IMAGE_NAME:latest
@@ -63,11 +56,13 @@ jobs:
   deploy:
     needs: build-and-deploy
     runs-on: ubuntu-latest
+    environment: test  # Igual que arriba si usas environment secrets
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials with access keys
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
